--- a/src/features/home/StudentHome.module.css
+++ b/src/features/home/StudentHome.module.css
@@ -1,9 +1,6 @@
 .student_home__h2 {
-  text-align: center;
-  color: #666;
-}
-.student_home__h2_new {
-  color: #666;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1.2rem;
 }
 .student_home__button {
   margin-top: 20px;
@@ -16,4 +13,51 @@
 }
 .student_home__nav td {
   border-bottom: none;
+}
+.student_home__subject {
+  display: inline-block;
+  padding: 0 12px;
+  color: #3daafb;
+  background-color: #f2f8fe;
+  border-radius: 8px;
+  border: solid 1px #3daafb;
+}
+.student_home__subject span {
+  margin: 6px 0;
+  display: block;
+}
+.student_home__answer {
+  display: inline-block;
+  padding: 0 12px;
+  border-radius: 8px;
+}
+.student_home__answer span {
+  margin: 6px 0;
+  display: block;
+}
+.student_home__answered {
+  border: solid 1px #ff7b7b;
+  color: #ff7b7b;
+  background-color: #fff8f8;
+}
+.student_home__not_answered {
+  border: solid 1px #666;
+  color: #666;
+  background-color: #fafafa;
+}
+.student_home__new td {
+  padding: 12px 16px;
+}
+.student_home__not_checkcell {
+  padding: 4px 0px 16px 16px;
+}
+.student_home__checked {
+  width: 8px;
+  height: 8px;
+}
+.student_home__not_check {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #3daafb;
 }
